[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oztk"
version = "0.0.1"
authors = [{ name="Yuanzhen Zhou", email="szrednick@gmail.com" }]
description = "Yuanzhen' s Python Toolkit Repo"
readme = "README.md"
dependencies = []
requires-python = ">=3.9"
keywords = ["oztk", "toolkit", "utility", "China"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
oztk-demo = "oztk.demo:demo"

[project.urls]
Homepage = "https://github.com/zhouyuanzhen/oztk"
Issues = "https://github.com/zhouyuanzhen/oztk/issues"
